# h2o-allegiant-backend

./: .dockerignore  .env.example  .gitignore  AI_AGENT_FLOW.md  ANALISIS_COMPONENTES_FALTANTES.md  ANALYSIS_REPORT.md  BUGFIX_LOGGER_KWARGS.md  BUGFIX_NOTES_ATTRIBUTE.md  CHANGELOG_NOTES_FEATURE.md  CLAUDE.md  COMPATIBILITY_LAYER_SUMMARY.md  CRITICAL_IMPROVEMENTS.md  DEBUGGING_STEPS.md  DOCKER_MIGRATION_STEPS.md  DOCKER_SETUP.md  Dockerfile  ENDPOINTS_COMPLETOS.md  QUICK_MIGRATION.sh  README.md  REFACTOR_SUMMARY.md  RESUMEN_EJECUTIVO_SESION.md  RESUMEN_SESION_CONTINUACION.md  UNIVERSALITY_VERIFICATION.md  alembic.ini  check-env.sh  docker-compose.yml  migrate_dependencies.sh  pyproject.toml  rebuild-and-test.sh  requirements-optimized.txt  requirements.minimal.txt  requirements.txt  test_polling_endpoint.sh
alembic/: README  env.py
alembic/versions/: 20251001_1407-0a96be64ebff_initial_schema_with_all_models.py  20251004_add_ai_metadata_to_proposals.py  20251022_2036-bc0d679af70e_initial_schema.py  20251030_1745-1e92062db9b3_remove_legacy_proposal_columns.py  20251030_1858-ed0d521e91b8_add_jsonb_indexes_for_performance.py  add_project_data_jsonb.py  migrate_to_fastapi_users.py
app/: __init__.py  main.py
app/agents/: __init__.py  proposal_agent.py
app/api/: dependencies.py
app/core/: __init__.py  auth_backend.py  auth_db.py  config.py  database.py  fastapi_users_instance.py  startup_checks.py  user_manager.py
app/data/: agent-improvement-plan.md  comprehensive-backend-analysis.md  equipment_pricing.json  hybrid_water_treatment_costs.json  optimized_water_treatment_costs.json  (+3 more)
docs/: AUDITORIA_CODIGO_2025.md  MIGRATION_AI_METADATA_TO_POSTGRES.md  MIGRATION_V2.md  SCHEMA_FIX_influentCharacteristics.md  STRUCTURED_LOGGING_GUIDE.md  Summary_Costs.csv  ai-agents-tools-standars.md  best-practices-tools.md  equipment-pricing.json  gpt-5-bestpractices.md  gpt-prompt-recomendations.md  principios-ingenieriaAI.md
scripts/: migrate_cleanup.sh  wait-for-services.sh
tests/: test_intelligent_case_filter_v2.py  test_v1_improvements.py
(+60 files in other folders)
