[project]
name = "h2o-allegiant-backend"
version = "1.0.0"
description = "H2O Allegiant - AI-powered water treatment engineering platform backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "H2O Allegiant Team" }
]

dependencies = [
    # FastAPI Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    
    # Database
    "sqlalchemy>=2.0.31",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    
    # Redis
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    
    # Security
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",  # Fix bcrypt version compatibility
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    
    # AI & LLM
    "openai>=1.35.0",
    "pydantic-ai>=0.0.14",
    
    # Document Processing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "PyPDF2>=3.0.0",
    "docling>=2.0.0",
    
    # PDF Generation
    "reportlab>=4.2.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.4",
    
    # Visualization
    "matplotlib>=3.8.0",
    "plotly>=5.22.0",
    "numpy>=1.26.0",
    
    # AWS
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    
    # HTTP & Utils
    "httpx>=0.27.0",
    "aiofiles>=24.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipython>=8.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
